[gd_scene load_steps=5 format=3 uid="uid://dptvwg10pqfw0"]

[ext_resource type="Script" path="res://intro/intro_convo/DynamicBGScript.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bp4cuq3dcdvir" path="res://artwork/GSL/SubParis_4.jpg" id="2"]
[ext_resource type="AudioStream" uid="uid://3jv0h8kwq51s" path="res://sounds/effects/switch_flip_fast.wav" id="3"]
[ext_resource type="AudioStream" uid="uid://c1kei8apftl3m" path="res://sounds/effects/switch_flip_slow.wav" id="4"]

[node name="DynamicBG" type="TextureRect" groups=["CharacterRects", "DynamicBGs"]]
modulate = Color(1, 1, 1, 0)
offset_left = -6.0
offset_right = 2310.0
offset_bottom = 2178.0
mouse_filter = 2
texture = ExtResource("2")
script = ExtResource("1")

[node name="SwitchFlipSlow" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")
volume_db = -15.0

[node name="SwitchFlipFast" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3")
volume_db = -15.0
